--- a/assets/css/sass/shared/_variables.scss
+++ b/assets/css/sass/shared/_variables.scss
@@ -77,12 +77,12 @@ $color-btn-disabled: white;
 $color-btn-disabled-bg: tint(black, 80%);
 
 $color-border-input: black;
-$color-border-input-hover: $dark-gray;
-$color-border-input-focus: black;
+$color-border-input-hover: $blue;
+$color-border-input-focus: $blue;
 
 $color-text-input: black;
-$color-text-input-hover: $dark-gray;
-$color-text-input-focus: black;
+$color-text-input-hover: $blue;
+$color-text-input-focus: $blue;
 
 $color-text-muted: lightgray;
 
