--- a/assets/css/sass/shared/utility/_layout.scss
+++ b/assets/css/sass/shared/utility/_layout.scss
@@ -1,7 +1,8 @@
 // Clearfix
 // ------------------------------------------ /
 .u-clearfix {
-	&:after {
+	&:before,
+    &:after {
 		content: "";
 		display: table;
 	}
