--- a/assets/css/sass/blocks/_masthead.scss
+++ b/assets/css/sass/blocks/_masthead.scss
@@ -1,8 +1,10 @@
 .masthead {
     &.is-sticky {
-        position: -webkit-sticky;
-        position: sticky;
-        top: $leading * 3;
+        @include media($md) {
+            position: -webkit-sticky;
+            position: sticky;
+            top: $leading * 3;
+        }
     }
     @extend .u-mb-2;
     @include media($md) {
