--- a/assets/css/sass/blocks/_page.scss
+++ b/assets/css/sass/blocks/_page.scss
@@ -1,3 +1,10 @@
+.page-header {
+    margin-top: 2rem;
+    @include media($md) {
+        margin-top: 0;
+    }
+}
+
 .page-title {
     @include media($lg) {
         padding-right: 6rem;
