--- a/assets/css/sass/blocks/_forms.scss
+++ b/assets/css/sass/blocks/_forms.scss
@@ -336,6 +336,18 @@ select {
 }
 
 
+// Fine print
+// ----------------------------------------
+.fine-print {
+    p {
+        font-size: 16px;
+        line-height: 1.2;
+        color: #A2A2A2;
+        margin-top: 0.5em;
+    }
+}
+
+
 // Errors
 // ----------------------------------------
 .Message {
